# grid nerds: fix range controls - add overflow-hidden; wrap with labels - input-text for price controls;

--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,6 @@ h4 {
   padding-right: 10px;
 }
 
-
 .slider-title {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -412,6 +411,7 @@ h4 {
   padding-top: 25px;
   padding-bottom: 85px;
 }
+
 .services {
   min-height: 350px;
   margin-bottom: 0;
@@ -685,6 +685,7 @@ h4 {
 
   list-style: none;
 }
+
 .about-description li {
   position: relative;
 
@@ -777,6 +778,7 @@ h4 {
   width: 100%;
   height: 416px;
 }
+
 .map-container {
   width: 100%;
 
@@ -944,6 +946,7 @@ h4 {
   margin-top: 16px;
   margin-bottom: 6px;
 }
+
 /* END index page*/
 
 /* START catalog page*/
@@ -974,6 +977,7 @@ h4 {
 .catalog-col {
   padding-top: 8px;
 }
+
 .catalog-filters {
   width: 240px;
   min-height: 720px;
@@ -1012,6 +1016,7 @@ h4 {
   height: 80px;
   margin-bottom: 15px;
   padding: 0 30px;
+  overflow: hidden;
 
   background-color: #f1f1f1;
   border-radius: 5px;
@@ -1049,9 +1054,11 @@ h4 {
           box-shadow: 0 1px 0 #d2d2d2;
   cursor: pointer;
 }
+
 .min-toggle {
   left: 19px;
 }
+
 .max-toggle {
   left: 159px;
 }
@@ -1077,6 +1084,7 @@ h4 {
   border: none;
   border-radius: 5px;
 }
+
 .min-price {
   margin-right: 14px;
 }
@@ -1084,8 +1092,8 @@ h4 {
 .max-price {
   float: right;
 }
-/* END Filter price */
 
+/* END Filter price */
 
 /* START Filter grid */
 
@@ -1208,6 +1216,7 @@ h4 {
 
   cursor: pointer;
 }
+
 .checkbox:hover {
   color: #000000;
 }
@@ -1283,6 +1292,7 @@ h4 {
 .checkbox:hover input:checked ~ .control-indicator::after {
   background-color: #b5b5b5;
 }
+
 /* END Filter features */
 
 .control {
@@ -1333,6 +1343,7 @@ h4 {
 
   list-style: none;
 }
+
 .catalog-sort-title {
   font-weight: 400;
   font-size: 12px;
@@ -1390,6 +1401,7 @@ h4 {
 .catalog-sort-content a:hover::after {
   border: 1px #00ca74 solid;
 }
+
 .catalog-gallery {
   font-size: 0;
 }
@@ -1404,6 +1416,7 @@ h4 {
   width: 30px;
   height: 15px;
 }
+
 .catalog-sort-arrows a {
   text-decoration: none;
 }
@@ -1471,6 +1484,7 @@ h4 {
   width: 240px;
   height: 240px;
 }
+
 .catalog-gallery-item:nth-child(2n) {
   margin-right: 0;
 }
@@ -1598,6 +1612,7 @@ h4 {
 .catalog-gallery-item:hover .item-price {
   display: block;
 }
+
 /* END item-price*/
 
 .catalog-gallery-item:nth-child(1) .btn,
@@ -1637,6 +1652,7 @@ h4 {
   border: 0;
   border-radius: 5px;
 }
+
 .page.next {
   padding: 10px 30px;
 }
@@ -1661,6 +1677,7 @@ h4 {
 
   pointer-events: none;
 }
+
 /* END catalog page*/
 
 .modal-content {
@@ -1746,6 +1763,7 @@ h4 {
 .feedback-form input:hover {
   border-color: #a2a9ac;
 }
+
 .feedback-form input:focus {
   border-color: #56bffb;
 }
@@ -1761,6 +1779,7 @@ h4 {
 .feedback-form textarea:hover {
   border-color: #a2a9ac;
 }
+
 .feedback-form textarea:focus {
   border-color: #56bffb;
 }
@@ -1804,6 +1823,7 @@ h4 {
   background-color: #d5d5d5;
   box-shadow: inset 0 3px 0 rgba(0, 0, 0, 0.15);
 }
+
 .show-contacts-form {
   position: fixed;
 
@@ -1832,6 +1852,7 @@ h4 {
     opacity: 1;
   }
 }
+
 .modal-error {
   animation: flash 0.5s;
 }
